# compliance_obligations_tracker

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  README.md  docker-compose.yml  render.yaml
.claude/: settings.json
.claude/hooks/: format-edit.py  guard-commit.py  guard-edit.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 979e09a981fe_initial_schema_with_document_storage.py
backend/app/: config.py  main.py
backend/app/data/: database.py  models.py  repository.py
backend/app/domain/: __init__.py  errors.py  obligation.py  rules.py  state_machine.py
backend/app/integrations/: storage.py
backend/app/routes/: obligations.py
backend/app/schemas/: obligation.py
backend/app/services/: obligation_service.py
backend/tests/: fakes.py  test_config.py
backend/tests/api/: conftest.py  test_obligations_api.py
backend/tests/domain/: conftest.py  test_rules.py  test_state_machine.py
backend/tests/services/: conftest.py  test_obligation_service.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: LocaleSwitcher.tsx  NavLinks.tsx
frontend/components/ui/: index.tsx  (+1 more)
frontend/lib/: api.ts  constants.ts  format.ts  types.ts
frontend/test/: ObligationForm.test.tsx  ObligationsTable.test.tsx  TransitionControls.test.tsx  fixtures.ts  format.test.ts
supabase/: config.toml
(+20 files in other folders)
